# Machi-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  readme.md
.github/workflows/: machi-build.yml
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Application/: CMakeLists.txt  application.cpp  application.h  application_config.h
Engine/Core/Components/: CMakeLists.txt  CameraComponent.h  ComponentManager.cpp  ComponentManager.h  GameObject.h  IComponent.h  IRenderer.h  Mobject.cpp  Mobject.h  Renderer.cpp  Renderer.h  RendererComponent.h  Transform.h  components_config.h
Engine/Core/DX12-RHI/: Buffer.cpp  Buffer.h  CMakeLists.txt  CommandAllocator.cpp  CommandAllocator.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Commons.h  DepthStencilView.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  GraphicsCommand.h  IResouce.h  Matrix.cpp  Matrix.h  NativeGraphicsManager.cpp  NativeGraphicsManager.h  PipelineDescriptor.h  PipelineStateObject.cpp  PipelineStateObject.h  RenderDescriptor.h  Resouce.h  RootParameter.h  RootSignature.cpp  RootSignature.h  Sampler.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Synchronizer.cpp  Synchronizer.h  Texture.h  Viewport.h  add_dx12.cpp  dx12-rhi_config.h  (+4 more)
Engine/Core/DataStruct/: CMakeLists.txt  Matrix.h  Node.h  Readme.md  UnsafeVector.h  datastructure_config.h
Engine/Core/Geometry/: CMakeLists.txt  Material.h  Mesh.cpp  Mesh.h  geometry_config.h
Engine/Core/Graphics/: Buffer.cpp  Buffer.h  CMakeLists.txt  GraphicManager.cpp  GraphicManager.h  IResource.h  Material.h  RenderDescriptor.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Vector.h  graphics_config.h  graphics_defined.h  machi_apple_graphics.cpp  machi_apple_graphics.h  machi_graphics.cpp  machi_graphics.h  primitive.h
Engine/Core/IO/: CMakeLIsts.txt  ObjReader.cpp  ObjReader.h  io_config.h  read_file.cpp  read_file.h
Engine/Core/Inputs/: InputManager.h
Engine/Core/Logger/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerException.h  logger_config.h
Engine/Core/MachiMetal/: CMakeLists.txt  metal.h
Engine/Core/Math/: Vector.cpp  Vector.h
Engine/Core/OS/: CMakeLists.txt  OS.cpp  OS.h  os_config.h
Engine/Core/Platform/: CMakeLists.txt  config.h  console.h  dynamic_lib.h  entry.h  inputs.cpp  inputs.h  platform.h  platform_config.h  types.h
Engine/Core/Platform/Apple/: apple_delegate.cpp  apple_delegate.h  application.cpp  appspec.cpp  appspec.h  config.h  entry.h  machi_graphics.cpp  machi_graphics.h  types.h
Engine/Core/Platform/Apple/metal-wrapper/: CMakeLists.txt  metal_core.h
Engine/Core/Platform/windows/: GraphicManager.cpp  application.cpp  appspec.cpp  appspec.h  config.h  console.cpp  console.h  d3dx12.h  dxhelper.h  dynamic_lib.h  engine_macro.h  entry.h  inputs.h  machi_graphics.cpp  machi_graphics.h  machi_windows_graphics.cpp  machi_windows_graphics.h  math_component.h  os.cpp  os.h  os_native.h  types.h  windows_platform.cpp  windows_platform.h
Engine/Core/PlugIns/: CMakeLists.txt  IImport.h  Iplugin.h  PluginManager.cpp  PluginManager.h  plugins_config.h
Engine/Core/Reflection/: reflection.h
Engine/Core/World/: CMakeLists.txt  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  world_config.h
Engine/Editor/: CMakeLists.txt
Engine/PlugIns/: CMakeLists.txt
Engine/PlugIns/mesh_loader/: CMakeLists.txt
Engine/Resources/Shader/: test_pixel_shader.hlsl  test_vertex_shader.hlsl
Test/: CMakeLists.txt  test.cpp
cmakes/: build_conf_helper.cmake  config.h.in  dependency_helper.cmake
enc_temp_folder/893088d9f828ba76e6acb9cc92e0/: CommandQueue.cpp
