#target_link_libraries(Platform INTERFACE ${graphics_libs})
#target_include_directories(Platform INTERFACE ${p_dir} "../") # Windows or Apple, and Core Module Path("../..")
set(graphics_src  "GraphicManager.cpp"  "machi_graphics.cpp" )
add_library(Graphics SHARED ${graphics_src})
if(WIN32)
message("DX12-backend is appended to Graphics library")
target_link_libraries(Graphics PRIVATE DX12-RHI)
elseif(APPLE)
message("metal-backend is appended to Graphics library")
target_link_libraries(Graphics PRIVATE metal_wrapper)
endif()

add_library(Machi::Graphics ALIAS Graphics)